force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/ortoo_qra__Member_Lookup_Rules__c.object-meta.xml
<CustomObject>
    <description>This object serves as a 1-Many mapping with User object. Attributes (fields) can be added to this object and later used by Q-assign configuration to run various types of matching rules while distributing records (such as Leads, Cases).</description>
    <label>Q-assign Member Lookup Rules</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q-assign Member Lookup Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>