force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Consultation</fullName>
            </value>
            <value>
                <fullName>Customer Training Support</fullName>
            </value>
            <value>
                <fullName>Distributor Training Support</fullName>
            </value>
            <value>
                <fullName>Establish Mobil Serv Plans</fullName>
            </value>
            <value>
                <fullName>Marketing Support</fullName>
            </value>
            <value>
                <fullName>Offer Consultation</fullName>
            </value>
            <value>
                <fullName>Pricing Request Initiation</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>