force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>