force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/CityNotLong__c.field-meta.xml
<CustomField>
    <fullName>CityNotLong__c</fullName>
    <label>CityCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>