force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>