force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dollar</fullName>
            </value>
            <value>
                <fullName>Yen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>