force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <label>CustomerSegment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>