force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/CustomerSubchannelType__c.field-meta.xml
<CustomField>
    <fullName>CustomerSubchannelType__c</fullName>
    <label>Customer/SubchannelType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk carriers</fullName>
            </value>
            <value>
                <fullName>Company Owned &amp; Operated</fullName>
            </value>
            <value>
                <fullName>Container ships</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Dredgers</fullName>
            </value>
            <value>
                <fullName>E-Commerce Online Sales Platform</fullName>
            </value>
            <value>
                <fullName>E-Commerce Online Sales Platform + O2O</fullName>
            </value>
            <value>
                <fullName>E-Commerce Online to Offline Sales Platform (O2O)</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Franchised Network</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Leased Fleet</fullName>
            </value>
            <value>
                <fullName>Narrow body</fullName>
            </value>
            <value>
                <fullName>National / Regional Branded Chains</fullName>
            </value>
            <value>
                <fullName>National / Regional chains</fullName>
            </value>
            <value>
                <fullName>OEM/EB - Initial fill</fullName>
            </value>
            <value>
                <fullName>OEM/EB - Service Fill</fullName>
            </value>
            <value>
                <fullName>Off shore vessels</fullName>
            </value>
            <value>
                <fullName>Owned Fleet</fullName>
            </value>
            <value>
                <fullName>Regional Jets</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Small work boats</fullName>
            </value>
            <value>
                <fullName>Tankers</fullName>
            </value>
            <value>
                <fullName>Tug Boats</fullName>
            </value>
            <value>
                <fullName>Turbo Prop</fullName>
            </value>
            <value>
                <fullName>Turnkey project</fullName>
            </value>
            <value>
                <fullName>Wide body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>