force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/DistributorAccount__c.field-meta.xml
<CustomField>
    <fullName>DistributorAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DistributorAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Q-assign Member Lookup Rules</relationshipLabel>
    <relationshipName>Q_assign_Member_Lookup_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>