force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/MarketBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>MarketBusinessUnit__c</fullName>
    <label>Market Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North AP</fullName>
            </value>
            <value>
                <fullName>South AP</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>EAME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>