force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/ortoo_qra__User_To_Match__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__User_To_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User that each rule record represents and matches to. This is the default field that ships with Q-assign for this purpose, but other fields can be used instead.</description>
    <inlineHelpText>The User that each rule record represents and matches to. This is the default field that ships with Q-assign for this purpose, but other fields can be used instead.</inlineHelpText>
    <label>User To Match</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Q_assign_Member_Lookup_Rules_to_Match</relationshipName>
    <type>Lookup</type>
</CustomField>