force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/Province_State__c.field-meta.xml
<CustomField>
    <fullName>Province_State__c</fullName>
    <label>Province/State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>