force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resource Request</fullName>
            </value>
            <value>
                <fullName>Lead EM</fullName>
            </value>
            <value>
                <fullName>Lead Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>