force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Q_assign_Member_Lookup_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>