force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/Sector_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sector_Channel__c</fullName>
    <label>Sector / Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture (B2B)</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Construction (B2B)</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
            </value>
            <value>
                <fullName>General Manufacturing</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Oil and Gas</fullName>
            </value>
            <value>
                <fullName>On High-way Commercial Fleet</fullName>
            </value>
            <value>
                <fullName>Power Generation</fullName>
            </value>
            <value>
                <fullName>Primary Metals</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>