force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Province/State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>