force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/StateNotLong__c.field-meta.xml
<CustomField>
    <fullName>StateNotLong__c</fullName>
    <label>State CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>