force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/SubsectorSubchannel__c.field-meta.xml
<CustomField>
    <fullName>SubsectorSubchannel__c</fullName>
    <label>Subsector / Subchannel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture (B2B)</fullName>
            </value>
            <value>
                <fullName>Auto Parts</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Cooling and Refrigeration</fullName>
            </value>
            <value>
                <fullName>Dealers</fullName>
            </value>
            <value>
                <fullName>Deep Sea Vessels</fullName>
            </value>
            <value>
                <fullName>Diesel Marine Power Plants</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Factory Fill</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Fuels Stations</fullName>
            </value>
            <value>
                <fullName>Gas Engine - All Others</fullName>
            </value>
            <value>
                <fullName>Gas Engine - Landfill &amp; Bio Gas</fullName>
            </value>
            <value>
                <fullName>Gas Turbines</fullName>
            </value>
            <value>
                <fullName>General Aviation</fullName>
            </value>
            <value>
                <fullName>Heavy Duty</fullName>
            </value>
            <value>
                <fullName>High Speed</fullName>
            </value>
            <value>
                <fullName>Hydroelectric</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Inland and Coastal</fullName>
            </value>
            <value>
                <fullName>Iron</fullName>
            </value>
            <value>
                <fullName>Light Duty</fullName>
            </value>
            <value>
                <fullName>Low Speed</fullName>
            </value>
            <value>
                <fullName>Lube Change Centers</fullName>
            </value>
            <value>
                <fullName>Machine Shops</fullName>
            </value>
            <value>
                <fullName>Mass Merchant</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Mining - Coal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>