force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Member Lookup Rules</relationshipLabel>
    <relationshipName>Member_Lookup_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>