force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>