force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/fields/Zip_Codee__c.field-meta.xml
<CustomField>
    <fullName>Zip_Codee__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>