force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/listViews/Distributor_Lead_Rules_China.listView-meta.xml
<ListView>
    <fullName>Distributor_Lead_Rules_China</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>County__c</columns>
    <columns>DistributorAccount__c</columns>
    <columns>CustomerSubchannelType__c</columns>
    <columns>CustomerSegment__c</columns>
    <columns>MarketBusinessUnit__c</columns>
    <columns>Sector_Channel__c</columns>
    <columns>SubsectorSubchannel__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Zip_Codee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>China</value>
    </filters>
    <label>Distributor Lead Rules - China</label>
</ListView>