force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/listViews/Exxon_Rules.listView-meta.xml
<ListView>
    <fullName>Exxon_Rules</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>CustomerSegment__c</columns>
    <columns>MarketBusinessUnit__c</columns>
    <columns>Rule_Type__c</columns>
    <columns>Sector_Channel__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>State__c</columns>
    <columns>DistributorAccount__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rule_Type__c</field>
        <operation>equals</operation>
        <value>Lead Distributor</value>
    </filters>
    <label>Exxon Rules</label>
</ListView>