force-app/main/default/objects/ortoo_qra__Member_Lookup_Rules__c/listViews/Exxon_Rules_China.listView-meta.xml
<ListView>
    <fullName>Exxon_Rules_China</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>County__c</columns>
    <columns>CustomerSubchannelType__c</columns>
    <columns>Rule_Type__c</columns>
    <columns>Sector_Channel__c</columns>
    <columns>SubsectorSubchannel__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>State__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DistributorAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rule_Type__c</field>
        <operation>equals</operation>
        <value>Lead Distributor</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>China</value>
    </filters>
    <label>Exxon Rules - China</label>
</ListView>